Stylesheet/emote/tag updates 2015-04-12

--- a/source-css/bloomjackquisition.css
+++ b/source-css/bloomjackquisition.css
@@ -602,6 +602,158 @@ a[href="/summerbitches"]{
     background-position:-800px -600px;
 }
 
+a[href="/superbloom"],
+a[href="/abreally"],
+a[href="/appleseedhug"],
+a[href="/abreluctant"],
+a[href="/filliesincognito"],
+a[href="/bloomsweetiefied"],
+a[href="/abhappy"],
+a[href="/abwhatthehay"],
+a[href="/abohcrap"],
+a[href="/abflop"],
+a[href="/abplot"],
+a[href="/applegloom"],
+a[href="/abjerk"],
+a[href="/abfedup"],
+a[href="/awkwardbowling"],
+a[href="/abeqg"],
+a[href="/ohsnapplebloom"],
+a[href="/abgag"],
+a[href="/twibloomplease"],
+a[href="/lamiabloom"],
+a[href="/abcatnap"],
+a[href="/abrustledjimmies"],
+a[href="/nevertheonlyone"],
+a[href="/cmcstack"],
+a[href="/engiebloom"],
+a[href="/absilly"],
+a[href="/abbucket"],
+a[href="/absecret"],
+a[href="/pinkiebloomhug"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:100px;
+    height:100px;
+    background-image: url(%%sheet3-3%%) !important;
+}
+
+a[href="/superbloom"]{
+    width:93px;
+    background-position:0px 0px;
+}
+a[href="/abreally"]{
+    width:90px;
+    background-position:-100px 0px;
+}
+a[href="/appleseedhug"]{
+    height:97px;
+    background-position:-0px -100px;
+}
+a[href="/abreluctant"]{
+    background-position:-100px -100px;
+}
+a[href="/filliesincognito"]{
+    width:200px;
+    height:159px;
+    background-position:-200px 0px;
+}
+a[href="/bloomsweetiefied"]{
+    width:200px;
+    height:157px;
+    background-position:-400px 0px;
+}
+a[href="/abhappy"]{
+    background-position:-600px 0px;
+}
+a[href="/abwhatthehay"]{
+    height:175px;
+    background-position:-700px 0px;
+}
+a[href="/abohcrap"]{
+    background-position:-600px -100px;
+}
+a[href="/abflop"]{
+    width:200px;
+    height:157px;
+    background-position:0px -200px;
+}
+a[href="/abplot"]{
+    background-position:-200px -200px;
+}
+a[href="/applegloom"]{
+    background-position:-300px -200px;
+}
+a[href="/abjerk"]{
+    background-position:-200px -300px;
+}
+a[href="/abfedup"]{
+    background-position:-300px -300px;
+}
+a[href="/awkwardbowling"]{
+    width:200px;
+    height:154px;
+    background-position:-400px -200px;
+}
+a[href="/abeqg"]{
+    width:76px;
+    background-position:-600px -200px;
+}
+a[href="/ohsnapplebloom"]{
+    height:200px;
+    background-position:-700px -200px;
+}
+a[href="/abgag"]{
+    background-position:-600px -300px;
+}
+a[href="/twibloomplease"]{
+    width:200px;
+    height:149px;
+    background-position:0px -400px;
+}
+a[href="/lamiabloom"]{
+    height:163px;
+    background-position:-200px -400px;
+}
+a[href="/abcatnap"]{
+    height:88px;
+    background-position:-300px -400px;
+}
+a[href="/abrustledjimmies"]{
+    background-position:-300px -500px;
+}
+a[href="/nevertheonlyone"]{
+    width:198px;
+    height:200px;
+    background-position:-400px -400px;
+}
+a[href="/cmcstack"]{
+    width:170px;
+    height:400px;
+    background-position:-600px -400px;
+}
+a[href="/engiebloom"]{
+    width:175px;
+    height:165px;
+    background-position:0px -600px;
+}
+a[href="/absilly"]{
+    background-position:-200px -600px;
+}
+a[href="/abbucket"]{
+    height:129px;
+    background-position:-300px -600px;
+}
+a[href="/absecret"]{
+    background-position:-200px -700px;
+}
+a[href="/pinkiebloomhug"]{
+    width:200px;
+    height:171px;
+    background-position:-400px -600px;
+}
+
 /* Blame /u/kekerino for these */
 
 a[href|="/brick"],
