--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -419,21 +419,21 @@ background-color: transparent !important;
 .res-nightmode .morelink:hover{background:#9edbf8!important;border-color:#9edbf8!important}
 
 /*a motes*/
-a[href|="/a00"],a[href|="/ajlie"],a[href|="/a10"],a[href|="/priceless"],a[href|="/a20"],a[href|="/flutterjack"],a[href|="/a30"],a[href|="/flutterroll"],
+a[href|="/a00"],a[href|="/ajlie"],a[href|="/a10"],a[href|="/priceless"],a[href|="/a20"],a[href|="/flutterjerk"],a[href|="/a30"],a[href|="/flutterroll"],
 a[href|="/a01"],a[href|="/twipride"],a[href|="/a11"],a[href|="/celestiamad"],a[href|="/a21"],a[href|="/twicrazy"],a[href|="/a31"],a[href|="/spikemeh"],
 a[href|="/a02"],a[href|="/lunateehee"],a[href|="/a12"],a[href|="/lunawait"],a[href|="/a22"],a[href|="/paperbagderpy"],a[href|="/a32"],a[href|="/abmeh"],
 a[href|="/a03"],a[href|="/ajhappy"],a[href|="/a13"],a[href|="/ppfear"],a[href|="/a23"],a[href|="/twibeam"],a[href|="/a33"],a[href|="/scootaderp"],
-a[href|="/a04"],a[href|="/raritydaww"],a[href|="/a14"],a[href|="/scootacheer"],a[href|="/a24"],a[href|="/swagintosh"],a[href|="/a34"],a[href|="/pinkieawe"],
+a[href|="/a04"],a[href|="/raritydaww"],a[href|="/a14"],a[href|="/scootacheer"],a[href|="/a34"],a[href|="/pinkieawe"],
 a[href|="/a05"],a[href|="/ajsup"],a[href|="/a15"],a[href|="/flutterwhoa"],a[href|="/a25"],a[href|="/rdcry"],a[href|="/a35"],a[href|="/silverspoon"],
 a[href|="/a06"],a[href|="/ohcomeon"],a[href|="/a16"],a[href|="/ppcute"],a[href|="/a26"],a[href|="/abbored"],a[href|="/a36"],a[href|="/rarityreally"],
 a[href|="/a07"],a[href|="/raritypaper"],a[href|="/a17"],a[href|="/sbbook"],a[href|="/a27"],a[href|="/scootaplease"],a[href|="/a37"],a[href|="/applegasp"],
 a[href|="/a08"],a[href|="/twiright"],a[href|="/a18"],a[href|="/celestiawut"],a[href|="/a28"],a[href|="/grannysmith"],a[href|="/a38"],a[href|="/rarishock"],
 a[href|="/a09"],a[href|="/shiningarmor"],a[href|="/a19"],a[href|="/chrysalis"],a[href|="/a29"],a[href|="/cadance"],a[href|="/a39"],a[href|="/applederp"],
-a[href|="/ra00"],a[href|="/rajlie"],a[href|="/ra10"],a[href|="/rpriceless"],a[href|="/ra20"],a[href|="/rflutterjack"],a[href|="/ra30"],a[href|="/rflutterroll"],
+a[href|="/ra00"],a[href|="/rajlie"],a[href|="/ra10"],a[href|="/rpriceless"],a[href|="/ra20"],a[href|="/rflutterjerk"],a[href|="/ra30"],a[href|="/rflutterroll"],
 a[href|="/ra01"],a[href|="/rtwipride"],a[href|="/ra11"],a[href|="/rcelestiamad"],a[href|="/ra21"],a[href|="/rtwicrazy"],a[href|="/ra31"],a[href|="/rspikemeh"],
 a[href|="/ra02"],a[href|="/rlunateehee"],a[href|="/ra12"],a[href|="/rlunawait"],a[href|="/ra22"],a[href|="/rpaperbagderpy"],a[href|="/ra32"],a[href|="/rabmeh"],
 a[href|="/ra03"],a[href|="/rajhappy"],a[href|="/ra13"],a[href|="/rppfear"],a[href|="/ra23"],a[href|="/rtwibeam"],a[href|="/ra33"],a[href|="/rscootaderp"],
-a[href|="/ra04"],a[href|="/rraritydaww"],a[href|="/ra14"],a[href|="/rscootacheer"],a[href|="/ra24"],a[href|="/rswagintosh"],a[href|="/ra34"],a[href|="/rpinkieawe"],
+a[href|="/ra04"],a[href|="/rraritydaww"],a[href|="/ra14"],a[href|="/rscootacheer"],a[href|="/ra34"],a[href|="/rpinkieawe"],
 a[href|="/ra05"],a[href|="/rajsup"],a[href|="/ra15"],a[href|="/rflutterwhoa"],a[href|="/ra25"],a[href|="/rrdcry"],a[href|="/ra35"],a[href|="/rsilverspoon"],
 a[href|="/ra06"],a[href|="/rohcomeon"],a[href|="/ra16"],a[href|="/rppcute"],a[href|="/ra26"],a[href|="/rabbored"],a[href|="/ra36"],a[href|="/rrarityreally"],
 a[href|="/ra07"],a[href|="/rraritypaper"],a[href|="/ra17"],a[href|="/rsbbook"],a[href|="/ra27"],a[href|="/rscootaplease"],a[href|="/ra37"],a[href|="/rapplegasp"],
@@ -441,7 +441,7 @@ a[href|="/ra08"],a[href|="/rtwiright"],a[href|="/ra18"],a[href|="/rcelestiawut"]
 a[href|="/ra09"],a[href|="/rshiningarmor"],a[href|="/ra19"],a[href|="/rchrysalis"],a[href|="/ra29"],a[href|="/rcadance"],a[href|="/ra39"],a[href|="/rapplederp"]
 {display:block; clear:none; float:left; width:70px; height:70px; background-image:url(%%amotes%%)!important}
 
-a[href|="/ra00"],a[href|="/rajlie"],a[href|="/ra10"],a[href|="/rpriceless"],a[href|="/ra20"],a[href|="/rflutterjack"],a[href|="/ra30"],a[href|="/rflutterroll"],
+a[href|="/ra00"],a[href|="/rajlie"],a[href|="/ra10"],a[href|="/rpriceless"],a[href|="/ra20"],a[href|="/rflutterjerk"],a[href|="/ra30"],a[href|="/rflutterroll"],
 a[href|="/ra01"],a[href|="/rtwipride"],a[href|="/ra11"],a[href|="/rcelestiamad"],a[href|="/ra21"],a[href|="/rtwicrazy"],a[href|="/ra31"],a[href|="/rspikemeh"],
 a[href|="/ra02"],a[href|="/rlunateehee"],a[href|="/ra12"],a[href|="/rlunawait"],a[href|="/ra22"],a[href|="/rpaperbagderpy"],a[href|="/ra32"],a[href|="/rabmeh"],
 a[href|="/ra03"],a[href|="/rajhappy"],a[href|="/ra13"],a[href|="/rppfear"],a[href|="/ra23"],a[href|="/rtwibeam"],a[href|="/ra33"],a[href|="/rscootaderp"],
@@ -457,7 +457,7 @@ a[href|="/ra09"],a[href|="/rshiningarmor"],a[href|="/ra19"],a[href|="/rchrysalis
 a[href|="/b00"],a[href|="/flutterfear"],a[href|="/b10"],a[href|="/ppboring"],a[href|="/b20"],a[href|="/rarityyell"],a[href|="/b30"],a[href|="/fluttershy"],
 a[href|="/b01"],a[href|="/ajcower"],a[href|="/b11"],a[href|="/ajsly"],a[href|="/b21"],a[href|="/eeyup"],a[href|="/b31"],a[href|="/rdsmile"],
 a[href|="/b02"],a[href|="/fluttersrs"],a[href|="/b12"],a[href|="/raritydress"],a[href|="/b22"],a[href|="/takealetter"],a[href|="/b32"],a[href|="/rdwut"],
-a[href|="/b03"],a[href|="/ppshrug"],a[href|="/b13"],a[href|="/spikenervous"],a[href|="/b23"],a[href|="/noooo"],a[href|="/b33"],a[href|="/dj"],
+a[href|="/b03"],a[href|="/ppshrug"],a[href|="/b13"],a[href|="/spikenervous"],a[href|="/b23"],a[href|="/noooo"],
 a[href|="/b04"],a[href|="/fluttershh"],a[href|="/b14"],a[href|="/flutteryay"],a[href|="/b24"],a[href|="/squintyjack"],a[href|="/b34"],a[href|="/spikepushy"],
 a[href|="/b05"],a[href|="/ajugh"],a[href|="/b15"],a[href|="/raritywut"],a[href|="/b25"],a[href|="/dumbfabric"],a[href|="/b35"],a[href|="/raritywhy"],
 a[href|="/b06"],a[href|="/trixiesmug"],a[href|="/b16"],a[href|="/flutterwink"],a[href|="/b26"],a[href|="/rarityannoyed"],a[href|="/b36"],a[href|="/soawesome"],
@@ -467,7 +467,7 @@ a[href|="/b09"],a[href|="/rarityjudge"],a[href|="/b19"],a[href|="/rarityprimp"],
 a[href|="/rb00"],a[href|="/rflutterfear"],a[href|="/rb10"],a[href|="/rppboring"],a[href|="/rb20"],a[href|="/rrarityyell"],a[href|="/rb30"],a[href|="/rfluttershy"],
 a[href|="/rb01"],a[href|="/rajcower"],a[href|="/rb11"],a[href|="/rajsly"],a[href|="/rb21"],a[href|="/reeyup"],a[href|="/rb31"],a[href|="/rrdsmile"],
 a[href|="/rb02"],a[href|="/rfluttersrs"],a[href|="/rb12"],a[href|="/rraritydress"],a[href|="/rb22"],a[href|="/rtakealetter"],a[href|="/rb32"],a[href|="/rrdwut"],
-a[href|="/rb03"],a[href|="/rppshrug"],a[href|="/rb13"],a[href|="/rspikenervous"],a[href|="/rb23"],a[href|="/rnoooo"],a[href|="/rb33"],a[href|="/rdj"],
+a[href|="/rb03"],a[href|="/rppshrug"],a[href|="/rb13"],a[href|="/rspikenervous"],a[href|="/rb23"],a[href|="/rnoooo"],
 a[href|="/rb04"],a[href|="/rfluttershh"],a[href|="/rb14"],a[href|="/rflutteryay"],a[href|="/rb24"],a[href|="/rsquintyjack"],a[href|="/rb34"],a[href|="/rspikepushy"],
 a[href|="/rb05"],a[href|="/rajugh"],a[href|="/rb15"],a[href|="/rraritywut"],a[href|="/rb25"],a[href|="/rdumbfabric"],a[href|="/rb35"],a[href|="/rraritywhy"],
 a[href|="/rb06"],a[href|="/rtrixiesmug"],a[href|="/rb16"],a[href|="/rflutterwink"],a[href|="/rb26"],a[href|="/rrarityannoyed"],a[href|="/rb36"],a[href|="/rsoawesome"],
@@ -602,7 +602,7 @@ a[href|="/rpl02"],a[href|="/rohnoes"]
 a[href|="/swagintosh"],a[href|="/a24"],a[href|="/rswagintosh"],a[href|="/ra24"]
 {display:block; clear:none; float:left; width:70px; height:70px; background-image:url(%%swagintosh-sheet%%)!important}
 
-a[href|="/dj"],a[href|="/threedog"],a[href|="/b33"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rb33"]
+a[href|="/dj"],a[href|="/b33"],a[href|="/rdj"],a[href|="/rb33"]
 {display:block; clear:none; float:left; width:70px; height:70px; background-image:url(%%dj-plounge%%)!important}
 
 /*Emote positioning Code*/
@@ -612,7 +612,7 @@ a[href|="/a00"],a[href|="/ajlie"],a[href|="/ra00"],a[href|="/rajlie"],a[href|="/
 a[href|="/a10"],a[href|="/priceless"],a[href|="/ra10"],a[href|="/rpriceless"],a[href|="/b10"],a[href|="/ppboring"],a[href|="/rb10"],a[href|="/rppboring"],a[href|="/c10"],a[href|="/rdhappy"],a[href|="/rc10"],a[href|="/rrdhappy"],a[href|="/e10"],a[href|="/rdhuh"],a[href|="/re10"],a[href|="/rrdhuh"],a[href|="/pl10"],a[href|="/twidur"],a[href|="/rpl10"],a[href|="/rtwidur"],.side .md table tr:nth-of-type(1) td:nth-of-type(3):after
 {background-position: -100% 0}
 
-a[href|="/a20"],a[href|="/flutterjack"],a[href|="/ra20"],a[href|="/rflutterjack"],a[href|="/b20"],a[href|="/rarityyell"],a[href|="/rb20"],a[href|="/rrarityyell"],a[href|="/c20"],a[href|="/rdannoyed"],a[href|="/rc20"],a[href|="/rrdannoyed"],a[href|="/e20"],a[href|="/snails"],a[href|="/re20"],a[href|="/rsnails"],a[href|="/pl20"],a[href|="/amzingmagic"],a[href|="/rpl20"],a[href|="/ramzingmagic"],.side .md table tr:nth-of-type(1) td:nth-of-type(4):after
+a[href|="/a20"],a[href|="/flutterjerk"],a[href|="/ra20"],a[href|="/rflutterjerk"],a[href|="/b20"],a[href|="/rarityyell"],a[href|="/rb20"],a[href|="/rrarityyell"],a[href|="/c20"],a[href|="/rdannoyed"],a[href|="/rc20"],a[href|="/rrdannoyed"],a[href|="/e20"],a[href|="/snails"],a[href|="/re20"],a[href|="/rsnails"],a[href|="/pl20"],a[href|="/amzingmagic"],a[href|="/rpl20"],a[href|="/ramzingmagic"],.side .md table tr:nth-of-type(1) td:nth-of-type(4):after
 {background-position: -200% 0}
 
 a[href|="/a30"],a[href|="/flutterroll"],a[href|="/ra30"],a[href|="/rflutterroll"],a[href|="/b30"],a[href|="/fluttershy"],a[href|="/rb30"],a[href|="/rfluttershy"],a[href|="/c30"],a[href|="/trixiesad"],a[href|="/rc30"],a[href|="/rtrixiesad"],a[href|="/e30"],a[href|="/twisad"],a[href|="/rpl30"],a[href|="/rtwisad"],.side .md table tr:nth-of-type(1) td:nth-of-type(5):after
@@ -1231,13 +1231,16 @@ a.author[href$="Ootachiful"] {font-size:0!important; overflow:hidden; display:in
 a.author[href$="Ootachiful"]:before {font-size:10px!important; visibility:visible!important; content: "Ohhitachiful "}
 
 a.author[href$="french_guy_al"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="french_guy_al"]:before {font-size:10px!important; visibility:visible!important; content: "finnish_gal_al "}
+a.author[href$="french_guy_al"]:before {font-size:10px!important; visibility:visible!important; content: "finnish_pal_al "}
 
 a.author[href$="TheDarkPR101"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="TheDarkPR101"]:before {font-size:10px!important; visibility:visible!important; content: "TsarDarkPR101 "}
 
 a.author[href$="-Plasmahawk-"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="-Plasmahawk-"]:before {font-size:10px!important; visibility:visible!important; content: "Night Glider Boo "}
+
+a.author[href$="DarkLordSnuffles"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+a.author[href$="DarkLordSnuffles"]:before {font-size:10px!important; visibility:visible!important; content: "BugPoneCuddles "}
 
 .sidecontentbox a.author[href$="Pinkie_Pie"] {font-size:0!important; overflow:hidden; display:none; content: "";}
 .sidecontentbox a.author[href$="DoomedCivilian"] {color: #E9B3F9}
