--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -28,7 +28,7 @@ div.titlebox span.word {
 /* Header */
 #header {
 height: 0x; 
-    background: url(%%revalatons%%) no-repeat #FFFFFF;
+    background: url(%%ponkaislight%%) no-repeat #FFFFFF;
     margin-bottom: 52px;
     background-position: 83% 20px;
     border-bottom: 0px solid #314D5B;
@@ -58,7 +58,7 @@ height: 0x;
 }
 
 #header .pagename.redditname a {
-    background: url(%%April1banner%%) 0px 0px no-repeat;
+    background: url(%%clearskiesbanner%%) 0px 0px no-repeat;
     width: 1100px;
     height: 237px;
     display: inline-block;
@@ -352,14 +352,7 @@ a[href|="/aliloo"] {
   height:150px;
 }
 
-a[href|="/pinkicorn"] {
-  background-image: url(%%pinkicorn%%);
-  display:block;
-  clear:none;
-  float:left;
-  width:200px;
-  height:150px;
-}
+
 
 a[href|="/hairdownchaser"] {
   background-image: url(%%hairdownchaser%%);
